code-blocks-server/code-blocks/tests/rust/snapshots/rust__build_move_fn-10.snap
---
source: tests/rust/main.rs
expression: "code_blocks::move_block(src_item, dst_item,\n        r#\"\n    #[test]\n    fn foo() {}\n/*  ^src */\n\n    fn bar() {}\n/*  ^dst */\n\"#).unwrap()"
---

    /*  ^src */

    fn bar() {}

    #[test]
    fn foo() {}
/*  ^dst */

