code-blocks-server/code-blocks/tests/rust/snapshots/rust__build_move_fn-4.snap
---
source: tests/rust/main.rs
expression: "format!(\"{}\\n\\n{}\",\n    r#\"\n    mod m {\n        fn foo() {}\n     /* ^src */\n    }\n\n    fn baz() {}\n/*  ^fail */\n\"#,\n    result.err().unwrap())"
---

    mod m {
        fn foo() {}
     /* ^src */
    }

    fn baz() {}
/*  ^fail */


Can't move items to different scopes
