code-blocks-server/code-blocks/tests/rust/snapshots/rust__build_move_fn-6.snap
---
source: tests/rust/main.rs
expression: "code_blocks::move_block(src_item, dst_item,\n        r#\"\n    fn foo() {}\n /* ^dst */\n\n    fn bar() {}\n\n    fn baz() {}\n /* ^src */\n\"#).unwrap()"
---

    fn foo() {}

    fn baz() {}
 /* ^dst */

    fn bar() {}
 /* ^src */

