code-blocks-server/code-blocks/tests/rust/snapshots/rust__move_block-10.snap
---
source: code-blocks/tests/rust/main.rs
expression: snapshot
---

    /*  ^src */

    fn bar() {}

    #[test]
    fn foo() {}
/*  ^dst */


New src start: 57
