code-blocks-server/code-blocks/tests/rust/snapshots/rust__move_block-4.snap
---
source: code-blocks/tests/rust/main.rs
expression: "format!(\"{}\\n\\n{:?}\",\n    r#\"\n    mod m {\n        fn foo() {}\n     /* ^src */\n    }\n\n    fn baz() {}\n/*  ^fail */\n\"#,\n    result.err().unwrap())"
---

    mod m {
        fn foo() {}
     /* ^src */
    }

    fn baz() {}
/*  ^fail */


Illegal move operation

Caused by:
    Blocks have different parents
