code-blocks-server/code-blocks/tests/rust/snapshots/rust__move_block-5.snap
---
source: code-blocks/tests/rust/main.rs
expression: "format!(\"{}\\n\\n{:?}\",\n    r#\"\n    mod m {\n/*  ^fail */\n        fn foo() {}\n     /* ^src */\n    }\n\n    fn baz() {}\n\"#,\n    result.err().unwrap())"
---

    mod m {
/*  ^fail */
        fn foo() {}
     /* ^src */
    }

    fn baz() {}


Illegal move operation

Caused by:
    Blocks have different parents
